--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/yaml-cpp"]
 	path = lib/yaml-cpp
 	url = https://github.com/jbeder/yaml-cpp.git
+[submodule "logp-buildlib"]
+	path = logp-buildlib
+	url = git@github.com:hoytech/logp-buildlib.git
