--- a/.gitmodules
+++ b/.gitmodules
@@ -3,10 +3,10 @@
 	url = https://github.com/zaphoyd/websocketpp.git
 [submodule "inc/protected_queue"]
 	path = inc/protected_queue
-	url = git@github.com:hoytech/protected_queue.git
+	url = https://github.com/hoytech/protected_queue.git
 [submodule "lib/yaml-cpp"]
 	path = lib/yaml-cpp
 	url = https://github.com/jbeder/yaml-cpp.git
 [submodule "logp-buildlib"]
 	path = logp-buildlib
-	url = git@github.com:hoytech/logp-buildlib.git
+	url = https://github.com/hoytech/logp-buildlib.git
