use hoytech-cpp submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "inc/websocketpp"]
 	path = inc/websocketpp
 	url = https://github.com/zaphoyd/websocketpp.git
-[submodule "inc/protected_queue"]
-	path = inc/protected_queue
-	url = https://github.com/hoytech/protected_queue.git
 [submodule "logp-buildlib"]
 	path = logp-buildlib
 	url = https://github.com/hoytech/logp-buildlib.git
+[submodule "hoytech-cpp"]
+	path = hoytech-cpp
+	url = https://github.com/hoytech/hoytech-cpp.git
