--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "hoytech-cpp"]
 	path = hoytech-cpp
 	url = https://github.com/hoytech/hoytech-cpp.git
+[submodule "inc/variant"]
+	path = inc/variant
+	url = https://github.com/mapbox/variant.git
