--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,14 @@ dist: trusty
 
 addons:
   apt:
+    sources: &sources
+      - ubuntu-toolchain-r-test
+      - sourceline: 'deb https://logp.s3.amazonaws.com/ amd64/'
+        key_url: 'https://logp.s3.amazonaws.com/logp-gpg-key.public'
     packages:
       - g++-5
       - libssl-dev
-    sources: &sources
-      - ubuntu-toolchain-r-test
+      - logp
 
 env: CXX=g++-5 CC=gcc-5
 
@@ -16,4 +19,5 @@ before_script:
   - git submodule update --init
 
 script:
+  - logp -a TVZQ5zzY5Ne6kCnCy2YzYy-wgHNjEEkuzAQ9xtKYvcuF1 run sleep 5
   - make
