--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ before_script:
   - git submodule update --init
 
 script:
-  - logp -a TVZQ5zzY5Ne6kCnCy2YzYy-wgHNjEEkuzAQ9xtKYvcuF1 run sleep 5
+  - logp -vvv run sleep 5
   - make
