--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ addons:
 
 env: CXX=g++-5 CC=gcc-5
 
-before_script:
-  - git submodule update --init
-
 script:
-  - logp -vvv run sleep 5
+  - logp ping -c 5
+  - git submodule update --init
   - make
